src/main/java/org/exquisite/parser/ExcelParser.java
// $ANTLR 3.4 ../src/org/exquisite/parser/Excel.g 2013-05-17 16:00:26
package org.exquisite.parser;

import org.antlr.runtime.*;
import org.antlr.runtime.tree.*;


@SuppressWarnings({"all", "warnings", "unchecked"})
public class ExcelParser extends Parser {
    public static final String[] tokenNames = new String[]{
            "<invalid>", "<EOR>", "<DOWN>", "<UP>", "AND", "CALL", "DIV", "EQUALS", "ERROR", "ERROR_STRING", "FALSE", "FLOAT", "FUNC", "GT", "GTEQ", "IDENT", "INT", "IS", "LT", "LTEQ", "MINUS", "MOD", "MULT", "NOT", "NOTEQUALS", "OR", "PLUS", "POW", "R1C1_REFERENCE", "REFERENCE", "ROOT", "SPACE", "TRUE", "'('", "')'", "','", "';'"
    };

    public static final int EOF = -1;
    public static final int T__33 = 33;
    public static final int T__34 = 34;
    public static final int T__35 = 35;
    public static final int T__36 = 36;
    public static final int AND = 4;
    public static final int CALL = 5;
    public static final int DIV = 6;
    public static final int EQUALS = 7;
    public static final int ERROR = 8;
    public static final int ERROR_STRING = 9;
    public static final int FALSE = 10;
    public static final int FLOAT = 11;
    public static final int FUNC = 12;
    public static final int GT = 13;
    public static final int GTEQ = 14;
    public static final int IDENT = 15;
    public static final int INT = 16;
    public static final int IS = 17;
    public static final int LT = 18;
    public static final int LTEQ = 19;
    public static final int MINUS = 20;
    public static final int MOD = 21;
    public static final int MULT = 22;
    public static final int NOT = 23;
    public static final int NOTEQUALS = 24;
    public static final int OR = 25;
    public static final int PLUS = 26;
    public static final int POW = 27;
    public static final int R1C1_REFERENCE = 28;
    public static final int REFERENCE = 29;
    public static final int ROOT = 30;
    public static final int SPACE = 31;
    public static final int TRUE = 32;
    public static final BitSet FOLLOW_exp_in_parse77 = new BitSet(new long[]{0x0000000000000000L});

    // delegators
    public static final BitSet FOLLOW_EOF_in_parse79 = new BitSet(new long[]{0x0000000000000002L});
    public static final BitSet FOLLOW_orExp_in_exp98 = new BitSet(new long[]{0x0000000000000002L});
    public static final BitSet FOLLOW_andExp_in_orExp109 = new BitSet(new long[]{0x0000000002000002L});
    public static final BitSet FOLLOW_OR_in_orExp112 = new BitSet(new long[]{0x0000000320918E00L});
    public static final BitSet FOLLOW_andExp_in_orExp115 = new BitSet(new long[]{0x0000000002000002L});
    public static final BitSet FOLLOW_eqExp_in_andExp128 = new BitSet(new long[]{0x0000000000000012L});
    public static final BitSet FOLLOW_AND_in_andExp131 = new BitSet(new long[]{0x0000000320918E00L});
    public static final BitSet FOLLOW_eqExp_in_andExp134 = new BitSet(new long[]{0x0000000000000012L});

    ;
    public static final BitSet FOLLOW_relExp_in_eqExp147 = new BitSet(new long[]{0x0000000001000082L});
    // $ANTLR end "parse"
    public static final BitSet FOLLOW_EQUALS_in_eqExp152 = new BitSet(new long[]{0x0000000320918E00L});

    ;
    public static final BitSet FOLLOW_NOTEQUALS_in_eqExp157 = new BitSet(new long[]{0x0000000320918E00L});
    // $ANTLR end "exp"
    public static final BitSet FOLLOW_relExp_in_eqExp161 = new BitSet(new long[]{0x0000000001000082L});

    ;
    public static final BitSet FOLLOW_addExp_in_relExp174 = new BitSet(new long[]{0x00000000000C6002L});
    // $ANTLR end "orExp"
    public static final BitSet FOLLOW_LT_in_relExp178 = new BitSet(new long[]{0x0000000320918E00L});

    ;
    public static final BitSet FOLLOW_LTEQ_in_relExp183 = new BitSet(new long[]{0x0000000320918E00L});
    // $ANTLR end "andExp"
    public static final BitSet FOLLOW_GT_in_relExp187 = new BitSet(new long[]{0x0000000320918E00L});

    ;
    public static final BitSet FOLLOW_GTEQ_in_relExp192 = new BitSet(new long[]{0x0000000320918E00L});
    // $ANTLR end "eqExp"
    public static final BitSet FOLLOW_addExp_in_relExp196 = new BitSet(new long[]{0x00000000000C6002L});

    ;
    public static final BitSet FOLLOW_multExp_in_addExp209 = new BitSet(new long[]{0x0000000004100002L});
    // $ANTLR end "relExp"
    public static final BitSet FOLLOW_PLUS_in_addExp213 = new BitSet(new long[]{0x0000000320918E00L});

    ;
    public static final BitSet FOLLOW_MINUS_in_addExp218 = new BitSet(new long[]{0x0000000320918E00L});
    // $ANTLR end "addExp"
    public static final BitSet FOLLOW_multExp_in_addExp222 = new BitSet(new long[]{0x0000000004100002L});

    ;
    public static final BitSet FOLLOW_unaryExp_in_multExp235 = new BitSet(new long[]{0x0000000008620042L});
    // $ANTLR end "multExp"
    public static final BitSet FOLLOW_MULT_in_multExp240 = new BitSet(new long[]{0x0000000320918E00L});

    ;
    public static final BitSet FOLLOW_DIV_in_multExp245 = new BitSet(new long[]{0x0000000320918E00L});
    // $ANTLR end "unaryExp"
    public static final BitSet FOLLOW_MOD_in_multExp250 = new BitSet(new long[]{0x0000000320918E00L});

    ;
    public static final BitSet FOLLOW_POW_in_multExp254 = new BitSet(new long[]{0x0000000320918E00L});
    // $ANTLR end "atom"
    public static final BitSet FOLLOW_IS_in_multExp258 = new BitSet(new long[]{0x0000000320918E00L});

    ;
    public static final BitSet FOLLOW_unaryExp_in_multExp262 = new BitSet(new long[]{0x0000000008620042L});
    // $ANTLR end "function"
    public static final BitSet FOLLOW_NOT_in_unaryExp275 = new BitSet(new long[]{0x0000000320018E00L});

    ;
    public static final BitSet FOLLOW_atom_in_unaryExp277 = new BitSet(new long[]{0x0000000000000002L});
    // $ANTLR end "error"

    // Delegated rules
    public static final BitSet FOLLOW_MINUS_in_unaryExp290 = new BitSet(new long[]{0x0000000320018E00L});
    public static final BitSet FOLLOW_atom_in_unaryExp292 = new BitSet(new long[]{0x0000000000000002L});
    public static final BitSet FOLLOW_atom_in_unaryExp305 = new BitSet(new long[]{0x0000000000000002L});
    public static final BitSet FOLLOW_TRUE_in_atom316 = new BitSet(new long[]{0x0000000000000002L});
    public static final BitSet FOLLOW_FALSE_in_atom321 = new BitSet(new long[]{0x0000000000000002L});
    public static final BitSet FOLLOW_INT_in_atom326 = new BitSet(new long[]{0x0000000000000002L});
    public static final BitSet FOLLOW_FLOAT_in_atom331 = new BitSet(new long[]{0x0000000000000002L});
    public static final BitSet FOLLOW_function_in_atom336 = new BitSet(new long[]{0x0000000000000002L});
    public static final BitSet FOLLOW_error_in_atom341 = new BitSet(new long[]{0x0000000000000002L});
    public static final BitSet FOLLOW_33_in_atom346 = new BitSet(new long[]{0x0000000320918E00L});
    public static final BitSet FOLLOW_exp_in_atom348 = new BitSet(new long[]{0x0000000400000000L});
    public static final BitSet FOLLOW_34_in_atom350 = new BitSet(new long[]{0x0000000000000002L});
    public static final BitSet FOLLOW_REFERENCE_in_atom359 = new BitSet(new long[]{0x0000000000000002L});
    public static final BitSet FOLLOW_IDENT_in_function530 = new BitSet(new long[]{0x0000000200000000L});
    public static final BitSet FOLLOW_33_in_function532 = new BitSet(new long[]{0x0000000720918E00L});
    public static final BitSet FOLLOW_exp_in_function536 = new BitSet(new long[]{0x0000001C00000000L});
    public static final BitSet FOLLOW_35_in_function540 = new BitSet(new long[]{0x0000000320918E00L});
    public static final BitSet FOLLOW_36_in_function544 = new BitSet(new long[]{0x0000000320918E00L});
    public static final BitSet FOLLOW_exp_in_function547 = new BitSet(new long[]{0x0000001C00000000L});
    public static final BitSet FOLLOW_34_in_function554 = new BitSet(new long[]{0x0000000000000002L});
    public static final BitSet FOLLOW_ERROR_STRING_in_error576 = new BitSet(new long[]{0x0000000000000002L});
    protected TreeAdaptor adaptor = new CommonTreeAdaptor();
    public ExcelParser(TokenStream input) {
        this(input, new RecognizerSharedState());
    }
    public ExcelParser(TokenStream input, RecognizerSharedState state) {
        super(input, state);
    }

    // delegates
    public Parser[] getDelegates() {
        return new Parser[]{};
    }

    public TreeAdaptor getTreeAdaptor() {
        return adaptor;
    }

    public void setTreeAdaptor(TreeAdaptor adaptor) {
        this.adaptor = adaptor;
    }

    public String[] getTokenNames() {
        return ExcelParser.tokenNames;
    }

    public String getGrammarFileName() {
        return "../src/org/exquisite/parser/Excel.g";
    }

    // $ANTLR start "parse"
    // ../src/org/exquisite/parser/Excel.g:23:8: public parse : exp EOF -> ^( ROOT exp ) ;
    public final ExcelParser.parse_return parse() throws RecognitionException {
        ExcelParser.parse_return retval = new ExcelParser.parse_return();
        retval.start = input.LT(1);


        CommonTree root_0 = null;

        Token EOF2 = null;
        ExcelParser.exp_return exp1 = null;


        CommonTree EOF2_tree = null;
        RewriteRuleTokenStream stream_EOF = new RewriteRuleTokenStream(adaptor, "token EOF");
        RewriteRuleSubtreeStream stream_exp = new RewriteRuleSubtreeStream(adaptor, "rule exp");
        try {
            // ../src/org/exquisite/parser/Excel.g:24:2: ( exp EOF -> ^( ROOT exp ) )
            // ../src/org/exquisite/parser/Excel.g:24:4: exp EOF
            {
                pushFollow(FOLLOW_exp_in_parse77);
                exp1 = exp();

                state._fsp--;

                stream_exp.add(exp1.getTree());

                EOF2 = (Token) match(input, EOF, FOLLOW_EOF_in_parse79);
                stream_EOF.add(EOF2);


                // AST REWRITE
                // elements: exp
                // token labels:
                // rule labels: retval
                // token list labels:
                // rule list labels:
                // wildcard labels:
                retval.tree = root_0;
                RewriteRuleSubtreeStream stream_retval = new RewriteRuleSubtreeStream(adaptor, "rule retval",
                        retval != null ? retval.tree : null);

                root_0 = (CommonTree) adaptor.nil();
                // 24:12: -> ^( ROOT exp )
                {
                    // ../src/org/exquisite/parser/Excel.g:24:15: ^( ROOT exp )
                    {
                        CommonTree root_1 = (CommonTree) adaptor.nil();
                        root_1 = (CommonTree) adaptor.becomeRoot(
                                (CommonTree) adaptor.create(ROOT, "ROOT")
                                , root_1);

                        adaptor.addChild(root_1, stream_exp.nextTree());

                        adaptor.addChild(root_0, root_1);
                    }

                }


                retval.tree = root_0;

            }

            retval.stop = input.LT(-1);


            retval.tree = (CommonTree) adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        } catch (RecognitionException re) {
            reportError(re);
            recover(input, re);
            retval.tree = (CommonTree) adaptor.errorNode(input, retval.start, input.LT(-1), re);

        } finally {
            // do for sure before leaving
        }
        return retval;
    }

    // $ANTLR start "exp"
    // ../src/org/exquisite/parser/Excel.g:27:1: exp : orExp ;
    public final ExcelParser.exp_return exp() throws RecognitionException {
        ExcelParser.exp_return retval = new ExcelParser.exp_return();
        retval.start = input.LT(1);


        CommonTree root_0 = null;

        ExcelParser.orExp_return orExp3 = null;


        try {
            // ../src/org/exquisite/parser/Excel.g:28:2: ( orExp )
            // ../src/org/exquisite/parser/Excel.g:28:4: orExp
            {
                root_0 = (CommonTree) adaptor.nil();


                pushFollow(FOLLOW_orExp_in_exp98);
                orExp3 = orExp();

                state._fsp--;

                adaptor.addChild(root_0, orExp3.getTree());

            }

            retval.stop = input.LT(-1);


            retval.tree = (CommonTree) adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        } catch (RecognitionException re) {
            reportError(re);
            recover(input, re);
            retval.tree = (CommonTree) adaptor.errorNode(input, retval.start, input.LT(-1), re);

        } finally {
            // do for sure before leaving
        }
        return retval;
    }

    // $ANTLR start "orExp"
    // ../src/org/exquisite/parser/Excel.g:31:1: orExp : andExp ( OR ^ andExp )* ;
    public final ExcelParser.orExp_return orExp() throws RecognitionException {
        ExcelParser.orExp_return retval = new ExcelParser.orExp_return();
        retval.start = input.LT(1);


        CommonTree root_0 = null;

        Token OR5 = null;
        ExcelParser.andExp_return andExp4 = null;

        ExcelParser.andExp_return andExp6 = null;


        CommonTree OR5_tree = null;

        try {
            // ../src/org/exquisite/parser/Excel.g:32:2: ( andExp ( OR ^ andExp )* )
            // ../src/org/exquisite/parser/Excel.g:32:4: andExp ( OR ^ andExp )*
            {
                root_0 = (CommonTree) adaptor.nil();


                pushFollow(FOLLOW_andExp_in_orExp109);
                andExp4 = andExp();

                state._fsp--;

                adaptor.addChild(root_0, andExp4.getTree());

                // ../src/org/exquisite/parser/Excel.g:32:11: ( OR ^ andExp )*
                loop1:
                do {
                    int alt1 = 2;
                    int LA1_0 = input.LA(1);

                    if ((LA1_0 == OR)) {
                        alt1 = 1;
                    }


                    switch (alt1) {
                        case 1:
                            // ../src/org/exquisite/parser/Excel.g:32:12: OR ^ andExp
                        {
                            OR5 = (Token) match(input, OR, FOLLOW_OR_in_orExp112);
                            OR5_tree =
                                    (CommonTree) adaptor.create(OR5)
                            ;
                            root_0 = (CommonTree) adaptor.becomeRoot(OR5_tree, root_0);


                            pushFollow(FOLLOW_andExp_in_orExp115);
                            andExp6 = andExp();

                            state._fsp--;

                            adaptor.addChild(root_0, andExp6.getTree());

                        }
                        break;

                        default:
                            break loop1;
                    }
                } while (true);


            }

            retval.stop = input.LT(-1);


            retval.tree = (CommonTree) adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        } catch (RecognitionException re) {
            reportError(re);
            recover(input, re);
            retval.tree = (CommonTree) adaptor.errorNode(input, retval.start, input.LT(-1), re);

        } finally {
            // do for sure before leaving
        }
        return retval;
    }

    // $ANTLR start "andExp"
    // ../src/org/exquisite/parser/Excel.g:35:1: andExp : eqExp ( AND ^ eqExp )* ;
    public final ExcelParser.andExp_return andExp() throws RecognitionException {
        ExcelParser.andExp_return retval = new ExcelParser.andExp_return();
        retval.start = input.LT(1);


        CommonTree root_0 = null;

        Token AND8 = null;
        ExcelParser.eqExp_return eqExp7 = null;

        ExcelParser.eqExp_return eqExp9 = null;


        CommonTree AND8_tree = null;

        try {
            // ../src/org/exquisite/parser/Excel.g:36:2: ( eqExp ( AND ^ eqExp )* )
            // ../src/org/exquisite/parser/Excel.g:36:4: eqExp ( AND ^ eqExp )*
            {
                root_0 = (CommonTree) adaptor.nil();


                pushFollow(FOLLOW_eqExp_in_andExp128);
                eqExp7 = eqExp();

                state._fsp--;

                adaptor.addChild(root_0, eqExp7.getTree());

                // ../src/org/exquisite/parser/Excel.g:36:10: ( AND ^ eqExp )*
                loop2:
                do {
                    int alt2 = 2;
                    int LA2_0 = input.LA(1);

                    if ((LA2_0 == AND)) {
                        alt2 = 1;
                    }


                    switch (alt2) {
                        case 1:
                            // ../src/org/exquisite/parser/Excel.g:36:11: AND ^ eqExp
                        {
                            AND8 = (Token) match(input, AND, FOLLOW_AND_in_andExp131);
                            AND8_tree =
                                    (CommonTree) adaptor.create(AND8)
                            ;
                            root_0 = (CommonTree) adaptor.becomeRoot(AND8_tree, root_0);


                            pushFollow(FOLLOW_eqExp_in_andExp134);
                            eqExp9 = eqExp();

                            state._fsp--;

                            adaptor.addChild(root_0, eqExp9.getTree());

                        }
                        break;

                        default:
                            break loop2;
                    }
                } while (true);


            }

            retval.stop = input.LT(-1);


            retval.tree = (CommonTree) adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        } catch (RecognitionException re) {
            reportError(re);
            recover(input, re);
            retval.tree = (CommonTree) adaptor.errorNode(input, retval.start, input.LT(-1), re);

        } finally {
            // do for sure before leaving
        }
        return retval;
    }

    // $ANTLR start "eqExp"
    // ../src/org/exquisite/parser/Excel.g:39:1: eqExp : relExp ( ( EQUALS ^| NOTEQUALS ^) relExp )* ;
    public final ExcelParser.eqExp_return eqExp() throws RecognitionException {
        ExcelParser.eqExp_return retval = new ExcelParser.eqExp_return();
        retval.start = input.LT(1);


        CommonTree root_0 = null;

        Token EQUALS11 = null;
        Token NOTEQUALS12 = null;
        ExcelParser.relExp_return relExp10 = null;

        ExcelParser.relExp_return relExp13 = null;


        CommonTree EQUALS11_tree = null;
        CommonTree NOTEQUALS12_tree = null;

        try {
            // ../src/org/exquisite/parser/Excel.g:40:2: ( relExp ( ( EQUALS ^| NOTEQUALS ^) relExp )* )
            // ../src/org/exquisite/parser/Excel.g:40:4: relExp ( ( EQUALS ^| NOTEQUALS ^) relExp )*
            {
                root_0 = (CommonTree) adaptor.nil();


                pushFollow(FOLLOW_relExp_in_eqExp147);
                relExp10 = relExp();

                state._fsp--;

                adaptor.addChild(root_0, relExp10.getTree());

                // ../src/org/exquisite/parser/Excel.g:40:11: ( ( EQUALS ^| NOTEQUALS ^) relExp )*
                loop4:
                do {
                    int alt4 = 2;
                    int LA4_0 = input.LA(1);

                    if ((LA4_0 == EQUALS || LA4_0 == NOTEQUALS)) {
                        alt4 = 1;
                    }


                    switch (alt4) {
                        case 1:
                            // ../src/org/exquisite/parser/Excel.g:40:12: ( EQUALS ^| NOTEQUALS ^) relExp
                        {
                            // ../src/org/exquisite/parser/Excel.g:40:12: ( EQUALS ^| NOTEQUALS ^)
                            int alt3 = 2;
                            int LA3_0 = input.LA(1);

                            if ((LA3_0 == EQUALS)) {
                                alt3 = 1;
                            } else if ((LA3_0 == NOTEQUALS)) {
                                alt3 = 2;
                            } else {
                                NoViableAltException nvae =
                                        new NoViableAltException("", 3, 0, input);

                                throw nvae;

                            }
                            switch (alt3) {
                                case 1:
                                    // ../src/org/exquisite/parser/Excel.g:40:14: EQUALS ^
                                {
                                    EQUALS11 = (Token) match(input, EQUALS, FOLLOW_EQUALS_in_eqExp152);
                                    EQUALS11_tree =
                                            (CommonTree) adaptor.create(EQUALS11)
                                    ;
                                    root_0 = (CommonTree) adaptor.becomeRoot(EQUALS11_tree, root_0);


                                }
                                break;
                                case 2:
                                    // ../src/org/exquisite/parser/Excel.g:40:24: NOTEQUALS ^
                                {
                                    NOTEQUALS12 = (Token) match(input, NOTEQUALS, FOLLOW_NOTEQUALS_in_eqExp157);
                                    NOTEQUALS12_tree =
                                            (CommonTree) adaptor.create(NOTEQUALS12)
                                    ;
                                    root_0 = (CommonTree) adaptor.becomeRoot(NOTEQUALS12_tree, root_0);


                                }
                                break;

                            }


                            pushFollow(FOLLOW_relExp_in_eqExp161);
                            relExp13 = relExp();

                            state._fsp--;

                            adaptor.addChild(root_0, relExp13.getTree());

                        }
                        break;

                        default:
                            break loop4;
                    }
                } while (true);


            }

            retval.stop = input.LT(-1);


            retval.tree = (CommonTree) adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        } catch (RecognitionException re) {
            reportError(re);
            recover(input, re);
            retval.tree = (CommonTree) adaptor.errorNode(input, retval.start, input.LT(-1), re);

        } finally {
            // do for sure before leaving
        }
        return retval;
    }

    // $ANTLR start "relExp"
    // ../src/org/exquisite/parser/Excel.g:43:1: relExp : addExp ( ( LT ^| LTEQ ^| GT ^| GTEQ ^) addExp )* ;
    public final ExcelParser.relExp_return relExp() throws RecognitionException {
        ExcelParser.relExp_return retval = new ExcelParser.relExp_return();
        retval.start = input.LT(1);


        CommonTree root_0 = null;

        Token LT15 = null;
        Token LTEQ16 = null;
        Token GT17 = null;
        Token GTEQ18 = null;
        ExcelParser.addExp_return addExp14 = null;

        ExcelParser.addExp_return addExp19 = null;


        CommonTree LT15_tree = null;
        CommonTree LTEQ16_tree = null;
        CommonTree GT17_tree = null;
        CommonTree GTEQ18_tree = null;

        try {
            // ../src/org/exquisite/parser/Excel.g:44:2: ( addExp ( ( LT ^| LTEQ ^| GT ^| GTEQ ^) addExp )* )
            // ../src/org/exquisite/parser/Excel.g:44:4: addExp ( ( LT ^| LTEQ ^| GT ^| GTEQ ^) addExp )*
            {
                root_0 = (CommonTree) adaptor.nil();


                pushFollow(FOLLOW_addExp_in_relExp174);
                addExp14 = addExp();

                state._fsp--;

                adaptor.addChild(root_0, addExp14.getTree());

                // ../src/org/exquisite/parser/Excel.g:44:11: ( ( LT ^| LTEQ ^| GT ^| GTEQ ^) addExp )*
                loop6:
                do {
                    int alt6 = 2;
                    int LA6_0 = input.LA(1);

                    if (((LA6_0 >= GT && LA6_0 <= GTEQ) || (LA6_0 >= LT && LA6_0 <= LTEQ))) {
                        alt6 = 1;
                    }


                    switch (alt6) {
                        case 1:
                            // ../src/org/exquisite/parser/Excel.g:44:12: ( LT ^| LTEQ ^| GT ^| GTEQ ^) addExp
                        {
                            // ../src/org/exquisite/parser/Excel.g:44:12: ( LT ^| LTEQ ^| GT ^| GTEQ ^)
                            int alt5 = 4;
                            switch (input.LA(1)) {
                                case LT: {
                                    alt5 = 1;
                                }
                                break;
                                case LTEQ: {
                                    alt5 = 2;
                                }
                                break;
                                case GT: {
                                    alt5 = 3;
                                }
                                break;
                                case GTEQ: {
                                    alt5 = 4;
                                }
                                break;
                                default:
                                    NoViableAltException nvae =
                                            new NoViableAltException("", 5, 0, input);

                                    throw nvae;

                            }

                            switch (alt5) {
                                case 1:
                                    // ../src/org/exquisite/parser/Excel.g:44:13: LT ^
                                {
                                    LT15 = (Token) match(input, LT, FOLLOW_LT_in_relExp178);
                                    LT15_tree =
                                            (CommonTree) adaptor.create(LT15)
                                    ;
                                    root_0 = (CommonTree) adaptor.becomeRoot(LT15_tree, root_0);


                                }
                                break;
                                case 2:
                                    // ../src/org/exquisite/parser/Excel.g:44:19: LTEQ ^
                                {
                                    LTEQ16 = (Token) match(input, LTEQ, FOLLOW_LTEQ_in_relExp183);
                                    LTEQ16_tree =
                                            (CommonTree) adaptor.create(LTEQ16)
                                    ;
                                    root_0 = (CommonTree) adaptor.becomeRoot(LTEQ16_tree, root_0);


                                }
                                break;
                                case 3:
                                    // ../src/org/exquisite/parser/Excel.g:44:26: GT ^
                                {
                                    GT17 = (Token) match(input, GT, FOLLOW_GT_in_relExp187);
                                    GT17_tree =
                                            (CommonTree) adaptor.create(GT17)
                                    ;
                                    root_0 = (CommonTree) adaptor.becomeRoot(GT17_tree, root_0);


                                }
                                break;
                                case 4:
                                    // ../src/org/exquisite/parser/Excel.g:44:32: GTEQ ^
                                {
                                    GTEQ18 = (Token) match(input, GTEQ, FOLLOW_GTEQ_in_relExp192);
                                    GTEQ18_tree =
                                            (CommonTree) adaptor.create(GTEQ18)
                                    ;
                                    root_0 = (CommonTree) adaptor.becomeRoot(GTEQ18_tree, root_0);


                                }
                                break;

                            }


                            pushFollow(FOLLOW_addExp_in_relExp196);
                            addExp19 = addExp();

                            state._fsp--;

                            adaptor.addChild(root_0, addExp19.getTree());

                        }
                        break;

                        default:
                            break loop6;
                    }
                } while (true);


            }

            retval.stop = input.LT(-1);


            retval.tree = (CommonTree) adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        } catch (RecognitionException re) {
            reportError(re);
            recover(input, re);
            retval.tree = (CommonTree) adaptor.errorNode(input, retval.start, input.LT(-1), re);

        } finally {
            // do for sure before leaving
        }
        return retval;
    }

    // $ANTLR start "addExp"
    // ../src/org/exquisite/parser/Excel.g:47:1: addExp : multExp ( ( PLUS ^| MINUS ^) multExp )* ;
    public final ExcelParser.addExp_return addExp() throws RecognitionException {
        ExcelParser.addExp_return retval = new ExcelParser.addExp_return();
        retval.start = input.LT(1);


        CommonTree root_0 = null;

        Token PLUS21 = null;
        Token MINUS22 = null;
        ExcelParser.multExp_return multExp20 = null;

        ExcelParser.multExp_return multExp23 = null;


        CommonTree PLUS21_tree = null;
        CommonTree MINUS22_tree = null;

        try {
            // ../src/org/exquisite/parser/Excel.g:48:2: ( multExp ( ( PLUS ^| MINUS ^) multExp )* )
            // ../src/org/exquisite/parser/Excel.g:48:4: multExp ( ( PLUS ^| MINUS ^) multExp )*
            {
                root_0 = (CommonTree) adaptor.nil();


                pushFollow(FOLLOW_multExp_in_addExp209);
                multExp20 = multExp();

                state._fsp--;

                adaptor.addChild(root_0, multExp20.getTree());

                // ../src/org/exquisite/parser/Excel.g:48:12: ( ( PLUS ^| MINUS ^) multExp )*
                loop8:
                do {
                    int alt8 = 2;
                    int LA8_0 = input.LA(1);

                    if ((LA8_0 == MINUS || LA8_0 == PLUS)) {
                        alt8 = 1;
                    }


                    switch (alt8) {
                        case 1:
                            // ../src/org/exquisite/parser/Excel.g:48:13: ( PLUS ^| MINUS ^) multExp
                        {
                            // ../src/org/exquisite/parser/Excel.g:48:13: ( PLUS ^| MINUS ^)
                            int alt7 = 2;
                            int LA7_0 = input.LA(1);

                            if ((LA7_0 == PLUS)) {
                                alt7 = 1;
                            } else if ((LA7_0 == MINUS)) {
                                alt7 = 2;
                            } else {
                                NoViableAltException nvae =
                                        new NoViableAltException("", 7, 0, input);

                                throw nvae;

                            }
                            switch (alt7) {
                                case 1:
                                    // ../src/org/exquisite/parser/Excel.g:48:14: PLUS ^
                                {
                                    PLUS21 = (Token) match(input, PLUS, FOLLOW_PLUS_in_addExp213);
                                    PLUS21_tree =
                                            (CommonTree) adaptor.create(PLUS21)
                                    ;
                                    root_0 = (CommonTree) adaptor.becomeRoot(PLUS21_tree, root_0);


                                }
                                break;
                                case 2:
                                    // ../src/org/exquisite/parser/Excel.g:48:22: MINUS ^
                                {
                                    MINUS22 = (Token) match(input, MINUS, FOLLOW_MINUS_in_addExp218);
                                    MINUS22_tree =
                                            (CommonTree) adaptor.create(MINUS22)
                                    ;
                                    root_0 = (CommonTree) adaptor.becomeRoot(MINUS22_tree, root_0);


                                }
                                break;

                            }


                            pushFollow(FOLLOW_multExp_in_addExp222);
                            multExp23 = multExp();

                            state._fsp--;

                            adaptor.addChild(root_0, multExp23.getTree());

                        }
                        break;

                        default:
                            break loop8;
                    }
                } while (true);


            }

            retval.stop = input.LT(-1);


            retval.tree = (CommonTree) adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        } catch (RecognitionException re) {
            reportError(re);
            recover(input, re);
            retval.tree = (CommonTree) adaptor.errorNode(input, retval.start, input.LT(-1), re);

        } finally {
            // do for sure before leaving
        }
        return retval;
    }

    // $ANTLR start "multExp"
    // ../src/org/exquisite/parser/Excel.g:51:1: multExp : unaryExp ( ( MULT ^| DIV ^| MOD ^| POW ^| IS ^) unaryExp )* ;
    public final ExcelParser.multExp_return multExp() throws RecognitionException {
        ExcelParser.multExp_return retval = new ExcelParser.multExp_return();
        retval.start = input.LT(1);


        CommonTree root_0 = null;

        Token MULT25 = null;
        Token DIV26 = null;
        Token MOD27 = null;
        Token POW28 = null;
        Token IS29 = null;
        ExcelParser.unaryExp_return unaryExp24 = null;

        ExcelParser.unaryExp_return unaryExp30 = null;


        CommonTree MULT25_tree = null;
        CommonTree DIV26_tree = null;
        CommonTree MOD27_tree = null;
        CommonTree POW28_tree = null;
        CommonTree IS29_tree = null;

        try {
